--- a/public/assets/i18n/ch.json
+++ b/public/assets/i18n/ch.json
@@ -3,9 +3,9 @@
     "UPLOAD": "Upload Photo",
     "LOGOUT": "Log Out",
     "HELP": "Help Center",
-    "HOME": "MAISON",
+    "HOME": "家",
     "BYKNKO": "BY KNKO",
-    "WITHDRAW": "SE DÉSISTER",
+    "WITHDRAW": "收回",
     "REFERRALS": "REFERRALS",
     "SETTINGS": "SETTINGS",
     "PROFILE": "MY PROFILE",
