--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -4,7 +4,7 @@
     "LOGOUT": "Log Out",
     "HELP": "Help Center",
     "HOME": "HOME",
-    "BYKNKO": "BY KNKO",
+    "BYKNKO": "BUY KNKO",
     "WITHDRAW": "WITHDRAW",
     "REFERRALS": "REFERRALS",
     "SETTINGS": "SETTINGS",
@@ -13,8 +13,8 @@
   },
   "HOME": {
     "TOTALBALANCE": "TOTAL BALANCE",
-    "ERNED_REFERALS": "ERNED BY REFERALS",
-    "VALUE_EUR": "CURENT VALUE IN EUR*",
+    "ERNED_REFERALS": "EARNED BY REFERRALS",
+    "VALUE_EUR": "CURRENT VALUE IN EUR*",
     "COMMENT": "*based on current token sale price",
     "SCROLL": "SCROLL THE TAB DOWN",
     "TRANSACTIONS": "RECENT TRANSACTIONS",
@@ -29,12 +29,12 @@
     "PURCHASE_TOKENS": "PURCHASE KNKO TOKENS",
     "PayWith": "Pay with",
     "AddNew": "Add New +",
-    "BUY_NOW": "BUY INSTANTLI NOW",
+    "BUY_NOW": "BUY INSTANTLY NOW",
     "YOU_BUYING": "YOU ARE BUYING",
     "PER": "per",
-    "MINIMUM_INVEST": "MINIMUM INVESTMEN",
+    "MINIMUM_INVEST": "MINIMUM INVESTMENT",
     "equivalent": "or equivalent",
-    "TEXT_BOT": "By pressing the button 'PAT NOW', You confirm You have read understood and accepded the",
+    "TEXT_BOT": "By pressing the button 'BUY INSTANTLY NOW', You confirm You have read understood and accepted the",
     "TERMS": "Terms of Sale",
     "AND": "and",
     "Privacy": "Privacy Policy.",
@@ -45,21 +45,21 @@
     "earned": "You also earned "
   },
   "WITHDRAW": {
-    "WINDROW": "WINDROW KNKO TOKENS",
-    "SCAN": "SCAN QR CODE INTEAD",
+    "WINDROW": "WITHDRAW KNKO TOKENS",
+    "SCAN": "SCAN QR CODE INSTEAD",
     "CONFIRM": "CONFIRM TRANSFER",
     "SENDING": "YOU ARE SENDING",
     "TO_WALLET": "TO YOUR ETH WALLET",
     "Warning": "Warning!",
-    "TEXT_BOT1": "By pressing 'CONFIRM TRANSFER' you undestund that the transactios is",
+    "TEXT_BOT1": "By pressing 'CONFIRM TRANSFER' you understand that the transaction is ",
     "Definitive": " definitive ",
-    "TEXT_BOT2": "and cannot be reverted. You will not be able to send KNKO tokens back to this platform. Only onece the Kaenko App will be available in 2019. You will be able to transferagain your KNKO tokens to our network.",
+    "TEXT_BOT2": "and cannot be reverted. You will not be able to send KNKO tokens back to this platform. Only once the Kaenko App will be available in 2019, You will be able to transfer again your KNKO tokens to our network.",
     "SEND": "SEND KNKO TO YOUR ETH WALLET",
     "YOUR_WALLET": "YOUR ETH WALLET"    
     
   },
   "REFERRALS": {
-    "MY_REFERALS": "MY REFERALS",
+    "MY_REFERALS": "MY REFERRALS",
     "ERNED": "ERNED THIS MONTH",
     "TOTAL_REFERRALS": "TOTAL EARNED BY REFERRALS",
     "FullName": "Full Name",
@@ -70,9 +70,9 @@
   "SETTINGS": {
     "ChangePassword": "Change Password",
     "Verification": "Enable 2-Step Verification",
-    "NUMBER": "MOBIL NUMBER*",
+    "NUMBER": "MOBILE NUMBER*",
     "CODE": "ENTER CODE RECEIVED BY SMS*",
-    "TEXT_BOT": "Protect your Account by enabling on extra layer of veryfication."
+    "TEXT_BOT": "Protect your Account by enabling an extra layer of verification."
   },
   "MY_PROFILE": {
     "Details": "Personal Details",
@@ -85,7 +85,8 @@
     "COUNTRY": "COUNTRY*",
     "TEXT_BOT": "To confirm your Address, please attach the document in jpj., png., pdf format. We accept either utility bill or bank statement whith your address and full name on it, no older than 3 month.",
     "Address": "Home Address",
-    "YOU": "Your"
+    "YOU": "Your",
+    "ETH": "ETH WALLET"
   },
   "FOOTER": {
     "Use": "Terms of Use",
