--- a/public/assets/i18n/it.json
+++ b/public/assets/i18n/it.json
@@ -1,57 +1,86 @@
 {
   "POST EVALUATION": "POST EVALUATION",
-  "DASHBOARD": "Dashboard",
+  "DASHBOARD": "DASHBOARD",
   "AUDIO LOGGER": "AUDIO LOGGER",
   "REPORT": "REPORT",
   "HOME": "HOME",
 
-  "Campaigns": "Campaigns",
-  "Total plays": "Total plays",
-  "TV Plays": "TV Plays",
-  "Radio Plays": "Radio Plays",
+  "Campaigns": "Campaigne",
+  "Total plays": "Totale passaggi",
+  "TV Plays": "Passaggi in TV",
+  "Radio Plays": "Passaggi in Radio",
 
-  "Campaign": "Campaign",
+  "Campaign": "Campaigne",
   "Brand": "Brand",
-  "Versions": "Versions",
-  "First-Play": "First-Play",
-  "Last-Play": "Last-Play",
-  "Plays": "Plays",
-  "Channels": "Channels",
+  "Versions": "Soggetti",
+  "First-Play": "Primo ascolto",
+  "Last-Play": "Ultimo ascolto",
+  "Plays": "Tot. Passaggi",
+  "Channels": "Emittenti",
 
-  "By week": "By week",
-  "Day to day": "Day to day",
-  "By dealership": "By dealership",
-  "By channel": "By channel",
-  "By time-slot": "By time-slot",
-  "Pre-post matching": "Pre-post matching",
-  "Summary": "Summary",
-  "Company": "Company",
-  "Product": "Product",
-  "show/hide columns": "show/hide columns",
-  "export": "export",
-  "Plays (pre)": "Plays (pre)",
-  "Plays (post)": "Plays (post)",
+  "By week": "per settimana",
+  "Day to day": "per singolo giorno",
+  "By dealership": "per concessionario",
+  "By channel": "per canale",
+  "By time-slot": "per fascia oraria",
+  "Pre-post matching": "pre-post matching",
+  "Summary": "riepilogo campagna",
+  "Company": "Azienda",
+  "Product": "Prodotto",
+  "show/hide columns": "Mostra/nascondi colonne",
+  "export": "Esporta",
+  "Plays (pre)": "Passaggi (pre)",
+  "Plays (post)": "Passaggi (post)",
   "GRPs": "GRP's",
   "GRPs (pre)": "GRP's (pre)",
   "GRPs (post)": "GRP's (post)",
-  "GRPs pre/post %": "GRP's pre/post %",
-  "AvgFreq": "AvgFreq",
-  "Week": "Week",
-  "Spots": "Spots",
+  "Creation Date": "Creation Date",
+  "GRPs pre/post %": "GRP's pre/post (%)",
+  "AvgFreq": "Frequenza Media",
+  "Week": "Settimana",
+  "Spots": "Soggetti",
   "Day-time": "Day-time",
   "Prime-time": "Prime-time",
   "Night-Time": "Night-Time",
-  "Date/Time": "Date/Time",
+  "Date/Time": "Data/ora di trasmissione",
   "Audio": "Audio",
-  "Duration": "Duration",
-  "Dealership": "Dealership",
-  "Program": "Program",
-  "Episode": "Episode",
-  "Episodes": "Episodes",
-  "SpotVersion": "SpotVersion",
-  "AMR": "AMR",
-  "Account Settings": "Account Settings",
-  "Theme Settings": "Theme Settings",
-  "Disable alerts": "Disable alerts",
-  "Sign out": "Sign out"
+
+  "Sheduled Date/Time": "Sheduled Date/Time",
+  "Detected Date/Time": "Detected Date/Time",
+  "Time Difference": "Time Difference",
+  "Notes": "Notes",
+
+  "Select a campaign": "Select a campaign",
+  "Select a date interval": "Select a date interval",
+  "Select a target": "Select a target",
+  "Filter Channels": "Filter Channels",
+  "Campaign name": "Campaign name",
+  "Campany name": "Campany name",
+  "Radio": "Radio",
+  "TV": "TV",
+  "Last 3 months": "Last 3 month",
+  "This month": "This month",
+  "Last 6 months": "Last 6 month",
+  "Last 12 months": "Last 12 month",
+
+  "Filter": "Filter",
+  "Analysis by": "Analysis by",
+  "Day-to-day": "Day-to-day",
+  "Date": "Date",
+  "Sky channels": "Sky channels",
+  "Mediaset Premium channels": "Mediaset Premium channels",
+  "All channels": "All channels",
+  "National channels": "National channels",
+  "Local channels": "Local channels",
+  "Duration": "Durata",
+  "Dealership": "Concessionario",
+  "Program": "Programma",
+  "Episode": "Episodio",
+  "Episodes": "Episodi",
+  "SpotVersion": "Soggetto",
+  "AMR": "Ascolto medio",
+  "Account Settings": "Impostazioni account",
+  "Theme Settings": "Impostazioni interfaccia",
+  "Disable alerts": "Disattiva notifiche",
+  "Sign out": "Esci"
 }
