--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -82,5 +82,7 @@
   "Mediaset Premium channels": "Mediaset Premium channels",
   "All channels": "All channels",
   "National channels": "National channels",
-  "Local channels": "Local channels"
+  "Local channels": "Local channels",
+  "Spot name": "Spot name",
+  "Channel": "Channel"
 }
