--- a/public/assets/i18n/it.json
+++ b/public/assets/i18n/it.json
@@ -82,5 +82,7 @@
   "Account Settings": "Impostazioni account",
   "Theme Settings": "Impostazioni interfaccia",
   "Disable alerts": "Disattiva notifiche",
-  "Sign out": "Esci"
+  "Sign out": "Esci",
+  "Spot name": "Spot name",
+  "Channel": "Channel"
 }
