--- a/public/assets/i18n/it.json
+++ b/public/assets/i18n/it.json
@@ -7,14 +7,14 @@
 
   "Campaigns": "Campaigne",
   "Total plays": "Totale passaggi",
-  "TV Plays": "Passaggi in TV",
-  "Radio Plays": "Passaggi in Radio",
+  "TV Plays": "Passaggi TV",
+  "Radio Plays": "Passaggi Radio",
 
   "Campaign": "Campaigne",
   "Brand": "Brand",
   "Versions": "Soggetti",
-  "First-Play": "Primo ascolto",
-  "Last-Play": "Ultimo ascolto",
+  "First-Play": "Primo passaggio",
+  "Last-Play": "Ultimo passaggio",
   "Plays": "Tot. Passaggi",
   "Channels": "Emittenti",
 
@@ -28,7 +28,7 @@
   "Company": "Azienda",
   "Product": "Prodotto",
   "show/hide columns": "Mostra/nascondi colonne",
-  "export": "Esporta",
+  "export": "Esporta dati",
   "Plays (pre)": "Passaggi (pre)",
   "Plays (post)": "Passaggi (post)",
   "GRPs": "GRP's",
@@ -39,39 +39,39 @@
   "AvgFreq": "Frequenza Media",
   "Week": "Settimana",
   "Spots": "Soggetti",
-  "Day-time": "Day-time",
-  "Prime-time": "Prime-time",
+  "Day-time": "Day-Time",
+  "Prime-time": "Prime-Time",
   "Night-Time": "Night-Time",
   "Date/Time": "Data/ora di trasmissione",
   "Audio": "Audio",
 
-  "Sheduled Date/Time": "Sheduled Date/Time",
-  "Detected Date/Time": "Detected Date/Time",
-  "Time Difference": "Time Difference",
-  "Notes": "Notes",
+  "Sheduled Date/Time": "Data/ora pianificata",
+  "Detected Date/Time": "Data/ora rilevata",
+  "Time Difference": "Differenza oraria",
+  "Notes": "Risultato",
 
-  "Select a campaign": "Select a campaign",
-  "Select a date interval": "Select a date interval",
-  "Select a target": "Select a target",
-  "Filter Channels": "Filter Channels",
-  "Campaign name": "Campaign name",
-  "Campany name": "Campany name",
+  "Select a campaign": "Seleziona una campagna",
+  "Select a date interval": "Seleziona un intervallo",
+  "Select a target": "Seleziona un target",
+  "Filter Channels": "Seleziona le emittenti",
+  "Campaign name": "Campagna",
+  "Campany name": "Azienda",
   "Radio": "Radio",
   "TV": "TV",
-  "Last 3 months": "Last 3 month",
-  "This month": "This month",
-  "Last 6 months": "Last 6 month",
-  "Last 12 months": "Last 12 month",
+  "Last 3 months": "Ultimi 3 mesi",
+  "This month": "Mese corrente",
+  "Last 6 months": "Ultimi 6 mesi",
+  "Last 12 months": "Ultimi 12 mesi",
 
-  "Filter": "Filter",
-  "Analysis by": "Analysis by",
-  "Day-to-day": "Day-to-day",
-  "Date": "Date",
-  "Sky channels": "Sky channels",
-  "Mediaset Premium channels": "Mediaset Premium channels",
-  "All channels": "All channels",
-  "National channels": "National channels",
-  "Local channels": "Local channels",
+  "Filter": "Filtra risultati",
+  "Analysis by": "Analisi per",
+  "Day-to-day": "per singolo giorno",
+  "Date": "Data",
+  "Sky channels": "Emittenti Sky",
+  "Mediaset Premium channels": "Emittenti Mediaset Premium",
+  "All channels": "Tutte le emittenti",
+  "National channels": "Emittenti nazionali",
+  "Local channels": "Emittenti locali",
   "Duration": "Durata",
   "Dealership": "Concessionario",
   "Program": "Programma",
